[package]
name = "rustkube"
description = "Common code for working with kubernetes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "3.1.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
